fix css: overlap focused item border with dropdown menu;

--- a/src/components/MainNav/MainNav.scss
+++ b/src/components/MainNav/MainNav.scss
@@ -8,7 +8,6 @@ $mobile-menu-max-height: 300px;
   display: flex;
   justify-content: flex-end;
   flex-wrap: wrap;
-  overflow: hidden;
 
   list-style-type: none;
 
@@ -17,7 +16,7 @@ $mobile-menu-max-height: 300px;
 
   max-height: $mobile-menu-max-height;
 
-  transition: max-height .2s ease-in;
+  transition: max-height .1s ease-in;
 
   @media (max-width: 420px) {
     display: block;
