--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -10,6 +10,7 @@
 body {
   background-color: $bg-color;
   color: $font-color-light75;
+  overflow: hidden;
 
   font-family: $main-font;
   font-weight: normal;
